# RaycastingJustForFun

./: .gitignore  CMakeLists.txt  README.md
demo/: Line.h  Map.cpp  Map.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h
include/: Camera.h  Core.h  Line.h  MathUtility.h  Point.h  Randomizer.h  Raycasting.h  StaticLine.h  Utility.h
include/rjff/: Line.h  Point.h  Raycasting.h
rjff_lib/: CMakeLists.txt
rjff_lib/demo/: CMakeLists.txt  Error.h  Line.cpp  Player.cpp  Player.h  Point.h  Randomizer.cpp  Randomizer.h  StaticLine.cpp  main.cpp
rjff_lib/include/rjff/: Camera.h  Utility.h
rjff_lib/src/: Line.cpp
rjff_sandbox/: CMakeLists.txt
rjff_sandbox/src/: main.cpp
rjff_tests/: CMakeLists.txt
rjff_tests/src/: CameraTest.cpp  LineTest.cpp  LineTest.h  MathUtilityTest.cpp  MathUtilityTest.h  RaycastingTest.cpp  StaticLineTest.cpp  StaticLineTest.h
src/: Camera.cpp  DrawableLine.cpp  DrawableLine.h  Line.cpp  Line.h  MathUtility.cpp  Randomizer.cpp  Randomizer.h  Raycasting.cpp  StaticLine.cpp  StaticLine.h  Utility.cpp  main.cpp
tests/src/: CameraTest.cpp  CameraTest.h  LineTest.h  MathUtilityTest.cpp  MathUtilityTest.h  RaycastingTest.cpp  RaycastingTest.h  StaticLineTest.h  UtilityTest.cpp  UtilityTest.h
